assets/styles/style.css
/* Font */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&display=swap');

.italic{
    font-style: italic;
}

.light{
    font-weight: 300;
}

.underline{
    text-decoration: underline;
    text-decoration-color: #FFC700;
}

.center{
    text-align: center;
}

header{
    position: sticky;
    top: 0;
    z-index: 1;
    padding-top: 10px;
    background-color: white;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
    
}

.circle-decoration{
    width: 150px;
    height: 150px;
    background-color: #FFC700;
    border-radius: 100%;
    position: absolute;
    top: -50px;
    right: -50px;
}

.circle-decoration:hover{
    transform: scale(1.2);
    transition: ease 0.5s;
}

body{
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    padding: 0;
    color: rgb(16, 16, 16);
    box-sizing: border-box;
}

a{
    text-decoration: none;
    color: rgb(16, 16, 16);
}

#company-logo{
    display: block;
    margin: auto;
}

ul{
    list-style: none;
    display: flex;
    justify-content: center;
    margin: 0;
}

li{
    margin: 10px;
}

li:hover{
    transform: scale(1.1);
    transition: ease 0.3s;
}

.description{
    margin: auto;
    min-height: 300px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1300px;
    line-height: 1.8;
    padding: 100px 0;
}

.description h1, .description p{
    color: white;
}

h1{
    font-size: 1.5em;
}

#about-us{
    background-image: linear-gradient(
        rgba(67, 67, 67, 0.5), 
        rgba(0, 0, 0, 0.5)
    ),  url(../images/header.jpg); 
    background-position: center;
    position: relative;
    overflow: hidden;
    font-size: 1.1em;
}

#about-us h1{
    margin-bottom: 15px;
}

#trending h3{
    font-size: 1.5em; 
    margin-top: 20px;   
}

#trending{
    margin: auto;
    width: 1300px;
    padding: 40px 0;
}

#trending section{
    margin-bottom: 50px;
}

.content{
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
}

.left-content{
    width: 30%;
}

.right-content{
    width: 65%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#top-5{
    display: flex;
    flex-wrap: wrap;  
    width: 80%;
    margin: auto;
    justify-content: space-around;
    padding: 40px 0;
}

#top-5 h2{
    flex-basis: 100%;
    margin-bottom: 40px;
}

figure{
    flex-basis: 18%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 10px;
}

figure img{
    height: 340px;
    margin-bottom: 17px;
}

figure img:hover {
    transform: scale(1.02);
    transition: ease .2s;
}

figcaption{
    margin-bottom: 40px;
}

#contact{
    padding: 40px 0;
    display: flex;
    flex-wrap: wrap;
    width: 1300px;
    margin: auto;
    justify-content: center;
}

#contact h2{
    flex-basis: 100%;
    margin-bottom: 20px;
}

aside{
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 0 15px 15px 0;
    background-image: linear-gradient(
        rgba(67, 67, 67, 0.8), 
        rgba(0, 0, 0, 1)
    ),  url(../images/aside-bg.jpg); 
}

aside h3, aside p{
    margin-bottom: 10px;
    text-align: center;
    width: 200px;
    margin-top: 10px;
    color: white;
}

aside img{
    border-radius: 20px;
    width: 200px;
}

form, aside{
    flex-basis: 50%;
    padding: 60px 0;
}


form{
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 15px 0 0 15px;
    background-image: linear-gradient(#ffc700, #d9aa01);
}

label{
    margin-bottom: 5px;
    width: 300px;
}

input, button{
    width: 300px;
    margin-bottom: 10px;
    height: 35px;
}

button{
    color: black;
    background-color: white;
    border: none;
    cursor: pointer;
    font-size: 1em;
    border-radius: 5px;
}

button:hover{
    transform: scale(1.03);
    transition: ease 0.5s;
}

textarea{
    margin-bottom: 20px;
    width: 300px;
    height: 100px;
}

input, textarea{
    border: 1px solid white;
    border-radius: 5px;
}

input:hover, textarea:hover{
    border: 1px solid #cea100;
}

footer{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 40px 0;
    background-color: rgb(12, 12, 12);
    font-size: 0.9em;
}

.left-footer, .right-footer{
    flex-basis: 30%;
}

footer p{
    color: white;
}

.right-footer p{
    text-align: end;
}

/* Dark Mode */
.button-mode{
    position: fixed;
    bottom: 40px;
    right: 40px;
    cursor: pointer;
}

.dark-bg-on{
    background-color: #17191a !important;
}

.light-txt-on{
    color: white !important;
}

.invisible{
    visibility: hidden;
}


/* Responsive */
@media screen and (max-width:1395px){
    .content{
        flex-direction: column;
        align-items: center;
    }

    .left-content{
        width: 50%;
        margin-bottom: 30px;
    }

    .right-content{
        width: 100%;
    }

    .title, .type{
        text-align: center;
    }

    .stream-logo{
        margin-top: 20px;
    }

    .description, #trending, #contact{
        width: 75%;
    }
}

@media screen and (max-width: 1050px){
    form, aside{
        flex-basis: 100%;
    }

    aside{
        border-radius: 0 0 15px 15px;
    }

    form{
        border-radius: 15px 15px 0 0;
    }

    label, input, button, textarea{
        width: 80%;
    }
}

@media screen and (max-width: 540px){
    .description, #trending, #contact{
        width: 80%;
    }

    .left-content{
        width: 80%;
    }

    footer{
        flex-wrap: wrap;
        padding: 40px 40px;
    }

    .left-footer, .right-footer{
        flex-basis: 100%;
        margin: 20px 0;
    }

    .right-footer p{
        text-align: start;
    }
}

